// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should focus the input 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onFocusChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1n5fcdz "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-1980bi2 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-mwlhju"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          className="css-mwlhju"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-mwlhju"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-s51m4w"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#fa5400",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      validationError={null}
    >
      <div
        className="null css-gywm7f"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should receive the correct value while typing 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1n5fcdz "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-1980bi2 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-mwlhju"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          className="css-mwlhju"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-mwlhju"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="foobar"
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-s51m4w"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#fa5400",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      validationError={null}
    >
      <div
        className="null css-gywm7f"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should render a simple text field 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1n5fcdz "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-1980bi2 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-mwlhju"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          className="css-mwlhju"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-mwlhju"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-s51m4w"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#fa5400",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      validationError={null}
    >
      <div
        className="null css-gywm7f"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should render the text field as password 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={true}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1n5fcdz "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-1980bi2 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={true}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-mwlhju"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={true}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          className="css-mwlhju"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={true}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-mwlhju"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="password"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-s51m4w"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#fa5400",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      validationError={null}
    >
      <div
        className="null css-gywm7f"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should render the text field with a default value 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value="FooBar"
>
  <div
    className="css-1n5fcdz "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={true}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-1980bi2 css-16msjt6 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value="FooBar"
    >
      <Component
        className="css-mwlhju"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value="FooBar"
      >
        <SimpleInput
          className="css-mwlhju"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value="FooBar"
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-mwlhju"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="FooBar"
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-s51m4w"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#fa5400",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      validationError={null}
    >
      <div
        className="null css-gywm7f"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should replace the error text with custom validation error 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1n5fcdz "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-1980bi2 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-mwlhju"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          className="css-mwlhju"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-mwlhju"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-s51m4w"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#fa5400",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      validationError={null}
    >
      <div
        className="null css-gywm7f"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should sanitize the input 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1n5fcdz "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-1980bi2 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-mwlhju"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          className="css-mwlhju"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-mwlhju"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="FOOBAR"
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-s51m4w"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#fa5400",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      validationError={null}
    >
      <div
        className="null css-gywm7f"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should show the error message 1`] = `
<div
  className="css-1n5fcdz "
>
  <Hint
    hintText=""
    visible={false}
  />
  <Label
    hasErrorMessage={true}
    isFloating={false}
    isFocused={false}
    label=""
    name="test-input"
  />
  <FormElement
    id="test-input"
    multiLine={false}
    name="test-input"
    onChange={[Function]}
    onFocusChange={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    value=""
  />
  <Underline
    hasErrorMessage={true}
    isFocused={false}
  />
  <ErrorText
    className={null}
    errorText="This is an error here"
    validationError={null}
  />
</div>
`;

exports[`<TextField /> should show the hint text 1`] = `
<div
  className="css-1n5fcdz "
>
  <Hint
    hintText="This is the hint text"
    visible={false}
  />
  <Label
    hasErrorMessage={false}
    isFloating={false}
    isFocused={false}
    label=""
    name="test-input"
  />
  <FormElement
    id="test-input"
    multiLine={false}
    name="test-input"
    onChange={[Function]}
    onFocusChange={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    value=""
  />
  <Underline
    hasErrorMessage={false}
    isFocused={false}
  />
  <ErrorText
    className={null}
    errorText=""
    validationError={null}
  />
</div>
`;

exports[`<TextField /> should show the label 1`] = `
<div
  className="css-1n5fcdz "
>
  <Hint
    hintText=""
    visible={false}
  />
  <Label
    hasErrorMessage={false}
    isFloating={false}
    isFocused={false}
    label="This is the label"
    name="test-input"
  />
  <FormElement
    id="test-input"
    multiLine={false}
    name="test-input"
    onChange={[Function]}
    onFocusChange={[Function]}
    onSanitize={[Function]}
    onValidate={[Function]}
    password={false}
    setRef={[Function]}
    type="text"
    value=""
  />
  <Underline
    hasErrorMessage={false}
    isFocused={false}
  />
  <ErrorText
    className={null}
    errorText=""
    validationError={null}
  />
</div>
`;

exports[`<TextField /> should trigger the onChange callback 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1n5fcdz "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-1980bi2 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-mwlhju"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          className="css-mwlhju"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-mwlhju"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value="a"
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-s51m4w"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#fa5400",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      validationError={null}
    >
      <div
        className="null css-gywm7f"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;

exports[`<TextField /> should trigger the validation callback 1`] = `
<TextField
  className=""
  errorText=""
  hintText=""
  label=""
  multiLine={false}
  name="test-input"
  onChange={[Function]}
  onSanitize={[Function]}
  onValidate={[Function]}
  password={false}
  setRef={[Function]}
  type="text"
  value=""
>
  <div
    className="css-1n5fcdz "
  >
    <Hint
      hintText=""
      visible={false}
    >
      <div
        className="css-tnfb18 css-1jyyyen"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </Hint>
    <Label
      hasErrorMessage={false}
      isFloating={false}
      isFocused={false}
      label=""
      name="test-input"
    >
      <label
        className="css-1980bi2 css-1fekhao"
        htmlFor="test-input"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </label>
    </Label>
    <FormElement
      id="test-input"
      multiLine={false}
      name="test-input"
      onChange={[Function]}
      onFocusChange={[Function]}
      onSanitize={[Function]}
      onValidate={[Function]}
      password={false}
      setRef={[Function]}
      type="text"
      value=""
    >
      <Component
        className="css-mwlhju"
        id="test-input"
        multiLine={false}
        name="test-input"
        onChange={[Function]}
        onFocusChange={[Function]}
        onSanitize={[Function]}
        onValidate={[Function]}
        password={false}
        setRef={[Function]}
        type="text"
        validateOnBlur={true}
        value=""
      >
        <SimpleInput
          className="css-mwlhju"
          disabled={false}
          id="test-input"
          multiLine={false}
          name="test-input"
          onChange={[Function]}
          onFocusChange={[Function]}
          onSanitize={[Function]}
          onValidate={[Function]}
          password={false}
          setRef={[Function]}
          type="text"
          validateOnBlur={true}
          value=""
        >
          <input
            autoComplete="off"
            autoCorrect="off"
            className="css-mwlhju"
            disabled={false}
            id="test-input"
            name="test-input"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            type="text"
            value=""
          />
        </SimpleInput>
      </Component>
    </FormElement>
    <Underline
      hasErrorMessage={false}
      isFocused={false}
    >
      <div
        className="css-s51m4w"
      >
        <div
          className="css-1tpmuef"
          style={
            Object {
              "borderBottomColor": "#fa5400",
              "transform": "scale3d(0,1,1)",
            }
          }
        />
      </div>
    </Underline>
    <ErrorText
      className={null}
      errorText=""
      validationError={null}
    >
      <div
        className="null css-gywm7f"
      >
        <Translate
          className=""
          params={Object {}}
          string=""
        >
          <span
            className=""
          />
        </Translate>
      </div>
    </ErrorText>
  </div>
</TextField>
`;
